; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_callback_xdr.c_op_cb_sequence_ref.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_callback_xdr.c_op_cb_sequence_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cb_sequence_ref = type { i32, i32 }

@.str = private unnamed_addr constant [24 x i8] c"sequence_ref.sequenceid\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"sequence_ref.slotid\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, %struct.cb_sequence_ref*)* @op_cb_sequence_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @op_cb_sequence_ref(i32* %0, %struct.cb_sequence_ref* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.cb_sequence_ref*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store %struct.cb_sequence_ref* %1, %struct.cb_sequence_ref** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load %struct.cb_sequence_ref*, %struct.cb_sequence_ref** %4, align 8
  %8 = getelementptr inbounds %struct.cb_sequence_ref, %struct.cb_sequence_ref* %7, i32 0, i32 1
  %9 = call i64 @xdr_u_int32_t(i32* %6, i32* %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %2
  %13 = call i32 @CBX_ERR(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %24

14:                                               ; preds = %2
  %15 = load i32*, i32** %3, align 8
  %16 = load %struct.cb_sequence_ref*, %struct.cb_sequence_ref** %4, align 8
  %17 = getelementptr inbounds %struct.cb_sequence_ref, %struct.cb_sequence_ref* %16, i32 0, i32 0
  %18 = call i64 @xdr_u_int32_t(i32* %15, i32* %17)
  store i64 %18, i64* %5, align 8
  %19 = load i64, i64* %5, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %14
  %22 = call i32 @CBX_ERR(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  br label %24

23:                                               ; preds = %14
  br label %24

24:                                               ; preds = %23, %21, %12
  %25 = load i64, i64* %5, align 8
  ret i64 %25
}

declare dso_local i64 @xdr_u_int32_t(i32*, i32*) #1

declare dso_local i32 @CBX_ERR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
